# inflation_tracker

./: .gitignore  README.md  build_exe.sh  pyproject.toml  requirements.txt  run_gui.py
.github/workflows/: build-windows.yml
alembic/: env.py
alembic/versions/: 16269c5dd309_инициализация_db.py  3d61603d9b72_добавлены_поля_к_базовай_модели_бд.py  46ae41b56dfb_инициализация_бд.py  478aac5dca50_инициализация_бд.py  515d0e071aac_changes_model_store_and_category.py  61f0a5cec42e_добавлены_флаги_удаления_для_связанных_.py  661a499dc48a_добавлены_комментарии_к_полям_таблиц_бд.py  73d321e4778b_инициализация_бд.py  c27e1cbe927d_инициализация_бд.py
app/: __init__.py  main.py
app/CRUD/: __init__.py  base.py  categories.py  products.py  purchases.py  stores.py  units.py  validators.py
app/cli/: __init__.py  categories.py  common.py  crud_commands.py  main.py  products.py  purchases.py  stores.py  units.py
app/core/: __init__.py  base.py  bootstrap.py  config_cli.py  config_log.py  constants.py  db.py  migrations.py  paths.py  settings.py
app/gui/: __init__.py  analytics.py  data_manager.py  main.py  qt_helpers.py  table_model.py
app/gui/tabs/: __init__.py  categories.py  common.py  products.py  purchases.py  stores.py  units.py
app/logging/: __init__.py  decorators.py
app/models/: __init__.py  category.py  product.py  purchase.py  store.py
app/service/: __init__.py  analytics.py  categories.py  crud_service.py  delete_guards.py  grafics.py  product.py  products.py  purchases.py  safe_delete.py  save_delete.py  service.py  stores.py  units.py
app/validate/: __init__.py  exceptions.py  guards.py  validators.py
tests/: __init__.py  conftest.py
tests/test_service/: test_category.py  test_product.py  test_purchase.py  test_store.py
