[project]
name = "inflation_tracker"
version = "0.1.0"
description = "Трекер для отслеживания инляции"
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3.9"]
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.17.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "ruff>=0.11.11",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.11",
]
testing = [
    "pytest>=9.0.2",
]

[tool.ruff]
indent-width = 4
line-length = 79
required-version = ">=0.11.11"
target-version = "py312"
preview = true
exclude = [
    "__pycache__",
    "revisions",
    "versions",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
select = [
    "E3",
    "E5",
    "E4",
    "E7",
    "E9",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "F",
    "ANN",
    "ASYNC",
    "A",
    "COM",
    "RET",
]
ignore = [
    "E265",
    "F811",
    "D100",
    "D105",
    "D104",
    "D203",
    "D211",
    "D213",
    "N818",
    "W505",
    "ANN401",
    "A005",
    "A002",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402", "E401"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["src"]
lines-after-imports = 2
combine-as-imports = true
split-on-trailing-comma = true
force-single-line = false
force-sort-within-sections = true
order-by-type = false
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
max-doc-length = 79
max-line-length = 79

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testspath = ["tests"]
addopts = [
    "--import-mode=importlib",
    "-v",
    "--strict-markers",
    "--disable-warnings",
    "-p no:warnings"
]
